[package]
name = "cutepokebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.1.0"
dotenv = "0.15.0"
fred = "4.3.2"
futures = "0.3.19"
poise = { git = "https://github.com/kangalioo/poise", features = ["collector"] }
rand = "0.8.4"
rs621 = "0.7.0-alpha"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.7"


[patch.crates-io]
rs621 = { git = "https://github.com/NotNorom/rs621" }
