[package]
name = "cutepokebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.3.4"
dotenv = "0.15.0"
fred = "5.1"
futures = "0.3.21"
poise = { version = "0.2.1", features = ["collector"] }
rand = "0.8.5"
rs621 = "0.7.0-alpha"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"


[patch.crates-io]
rs621 = { git = "https://github.com/nasso/rs621" }
